--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.7.0"
+    "axios": "^0.19.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "lin-mizar": "^0.2.0-beta.1",
+    "require-directory": "^2.1.1"
+  },
+  "scripts": {
+    "serve": "nodemon app.js"
   }
 }
