--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "lin-mizar": "^0.2.0-beta.1",
-    "require-directory": "^2.1.1"
+    "lodash": "^4.17.15",
+    "require-directory": "^2.1.1",
+    "sequelize": "^5.10.3",
+    "validator": "^11.1.0"
   },
   "scripts": {
     "serve": "nodemon app.js"
